test/fixtures/public/analysis/fail/main_this.jmm
class A {
    public static void main(String[] args) {
        this.foo();
    }
    public int foo() {
        return 0;
    }
}